<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/item_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        xmlns:app="http://schemas.android.com/apk/res-auto">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/images"
        android:id="@+id/featured_img"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@drawable/bg_featured"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="4.4"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:gravity="center|left"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_user"/>

                    <TextView
                        android:fontFamily="@font/roboto"
                        android:id="@+id/FullName"
                        android:text="\t"
                        android:textSize="@dimen/_14ssp"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                      />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:gravity="center|left"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_link_new"/>

                    <TextView
                        android:id="@+id/RepoLink"
                        android:text="\t"
                        android:fontFamily="@font/roboto"
                        android:textSize="@dimen/_14ssp"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|left"
                    android:layout_marginBottom="4dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_coding"/>

                    <TextView
                        android:id="@+id/Language"
                        android:text="\t"
                        android:fontFamily="@font/roboto"
                        android:textSize="@dimen/_14ssp"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1.6"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|left"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_star_new"/>

                    <TextView
                        android:id="@+id/NumberOfStars"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:gravity="center|start"
                        android:text="@string/number_of_stars"
                        android:layout_marginStart="8dp"
                        android:maxLines="1"
                        android:textSize="@dimen/_15ssp"
                        android:ellipsize="end"
                        android:textColor="@color/light_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_code_fork_symbol"/>

                    <TextView
                        android:id="@+id/NumberOfForks"
                        android:layout_gravity="center|start"
                        android:gravity="center|start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:text="@string/number_of_forks"
                        android:textColor="@color/light_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|start"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_watching"/>

                    <TextView
                        android:id="@+id/NumberOfWatch"
                        android:layout_gravity="center|start"
                        android:gravity="center|start"
                        android:layout_width="match_parent"
                        android:layout_marginStart="8dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_watch"
                        android:textColor="@color/light_gray" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

