<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.DetailsTopicActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/mtrl_toolbar_default_height"
            android:id="@+id/bar"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detailedP_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="enterAlways|scroll"
                app:title="Replies"
                app:titleTextColor="@color/white"
                app:titleMarginStart="@dimen/_90sdp"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_8sdp"
            android:verticalScrollbarPosition="right"
            android:scrollIndicators="right"
            android:layout_gravity="center"
            android:id="@+id/cards"
            android:layout_below="@id/bar"
            app:cardBackgroundColor="@color/pale_grey"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5ssp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/arrow_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_10ssp"
                android:background="@android:color/transparent"
                android:minWidth="48dp"
                android:visibility="invisible"
                android:minHeight="48dp"
                android:tint="@color/black"
                android:contentDescription="@string/delete_topic"
                android:src="@android:drawable/arrow_down_float" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:focusable="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:elevation="20sp"
                    android:layout_marginTop="13dp"
                    android:layout_marginStart="13dp"
                    android:id="@+id/parentRelative">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_avatar"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/profile_image_detailP"
                        android:contentDescription="@string/todo" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/parentRelative"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_6sdp">

                    <com.gitpro.gitidea.customs.CustomTextView
                        android:id="@+id/detail_nameP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginTop="@dimen/_13ssp"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:text="John"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        app:typeface="roboto.ttf" />

                    <com.gitpro.gitidea.customs.CustomTextView
                        android:id="@+id/detail_descP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/detail_nameP"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/_7ssp"
                        android:layout_marginTop="@dimen/_7ssp"
                        android:layout_marginEnd="@dimen/_7ssp"
                        android:layout_marginBottom="@dimen/_7ssp"
                        android:maxLines="4"
                        android:minHeight="43dp"
                        android:text="Project Content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:typeface="montserrat_semibold.ttf" />

                    <com.overflowarchives.linkpreview.SkypePreview
                        android:id="@+id/detail_contentP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:clipToOutline="true"
                        android:maxHeight="@dimen/_100sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="@dimen/_9sdp"
                        android:layout_marginStart="@dimen/_9sdp"
                        android:layout_below="@id/detail_descP"
                        />

                    <View
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@id/detail_contentP"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/_10ssp"
                        android:layout_marginTop="4sp"
                        android:layout_marginEnd="@dimen/_10ssp"
                        android:background="@color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/comment_detailP"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_below="@id/detail_contentP"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_9sdp"
                        app:srcCompat="@drawable/ic_chat_comment_gray" />

                    <com.gitpro.gitidea.customs.CustomTextView
                        android:id="@+id/comment_num_detailP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/detail_contentP"
                        android:layout_marginTop="@dimen/_9sdp"
                        android:layout_toEndOf="@id/comment_detailP"
                        android:textColor="@color/black"
                        app:typeface="roboto.ttf" />



                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/like_detailP"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_below="@id/detail_contentP"
                        android:layout_marginTop="@dimen/_9sdp"
                        android:layout_marginStart="@dimen/_60ssp"
                        android:layout_toEndOf="@id/comment_detailP"
                        app:srcCompat="@drawable/ic_favourite" />


                    <com.gitpro.gitidea.customs.CustomTextView
                        android:id="@+id/like_num_detailP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        app:typeface="roboto.ttf"
                        android:layout_marginTop="@dimen/_9sdp"
                        android:layout_below="@id/detail_contentP"
                        android:layout_toEndOf="@id/like_detailP"
                        />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/share_detailP"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_below="@id/detail_contentP"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/_9sdp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        app:srcCompat="@drawable/ic_baseline_share_24" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_3sdp"
                        android:layout_below="@id/share_detailP"
                        android:layout_marginTop="3sp"
                        android:background="@color/pale_grey"/>
                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:id="@+id/view1"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@color/black_soft"
            android:layout_below="@id/cards"
            />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_commentsP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rl_comment"
            android:layout_below="@id/view1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp">

            <ScrollView
                android:id="@+id/nested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comments_listP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/all_comments_layout" />

            </ScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40ssp"
            android:background="@drawable/inputs"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_5ssp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="@dimen/_5ssp"
            android:paddingHorizontal="@dimen/_10ssp"
            android:id="@+id/rl_comment">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/comment_inputP"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="18dp"
                android:layout_toStartOf="@+id/comment_post_button"
                android:background="@color/fui_transparent"
                android:fontFamily="@font/roboto"
                android:hint="@string/write_a_comment_here"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:textColor="@color/light_gray"
                android:textColorHint="@color/light_gray" />

            <ImageView
                android:id="@+id/comment_post_buttonP"
                android:layout_width="@dimen/_25ssp"
                android:layout_height="@dimen/_40ssp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"

                android:src="@drawable/ic_baseline_send_24" />

        </RelativeLayout>
        <com.gitpro.gitidea.customs.CustomTextView
            android:id="@+id/detail_dateP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/view1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:maxLength="45"
            app:typeface="roboto.ttf"
           android:layout_marginEnd="@dimen/_3sdp"
            android:textColor="@color/black_soft"
            android:textSize="@dimen/_12ssp" />

        <com.gitpro.gitidea.customs.CustomTextView
            android:id="@+id/detail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/view1"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_86sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text=" - Project shared"
            android:textColor="#091E6A"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold|italic"
            app:typeface="montserrat_medium.ttf" />


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
